feature(add-links): add signin and signup links to homepage [fininishes #165410057]

--- a/UI/css/typography.css
+++ b/UI/css/typography.css
@@ -12,4 +12,4 @@
 h1, #getloan { font-size: 1em; font-weight: 500; margin-bottom: 1.3em; }
 h2 { font-size: 1.4em; font-weight: 900; margin-bottom: 1.3em; }
 p { font-size: 1em; }
-li, a { font-size: 1.1em;  }
+a { font-size: 1.1em;  }
